address remaining feedback, remove unnecessary changes, cleanup